# cromulence

./: README.md  setup.cfg
cromulence/: __init__.py
cromulence/wordle/: __init__.py  dictionary.py  game_response.py  guess.py
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  cromulence.rst  cromulence.wordle.rst  index.rst  modules.rst
test/: test_dictionary.py  test_game_response.py  test_guess.py
