[metadata]
name = cromulence
version = 0.0.1
author = Karl Nicoll
author_email = karl@karlnicoll.net
description = a library that provides various utilities for solving popular word games.
# long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karlnicoll/cromulence
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = cromulence.wordle
install_requires =
    requests==2.27.1
python_requires = >=3.10

[flake8]
max_line_length=88
