[metadata]
name = cromulence
version = 0.0.1
author = Karl Nicoll
author_email = karl@karlnicoll.net
description = a library that provides various utilities for solving popular word games.
# long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/karlnicoll/cromulence
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    cromulence.wordle
    cromulence.bin
install_requires =
    click==8.1.2
    requests==2.27.1
python_requires = >=3.10

[options.entry_points]
console_scripts =
        cromulence-wordle = cromulence.bin.cromulence_wordle:main

[flake8]
max_line_length=88
